--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ cycler==0.11.0
 datasets==2.14.2
 decorator==5.1.1
 dill==0.3.7
+distlib==0.3.7
 docker-pycreds==0.4.0
+exceptiongroup==1.1.2
 executing==1.2.0
 fastapi==0.100.1
 ffmpy==0.3.1
@@ -77,7 +79,7 @@ pandas==2.0.3
 parso==0.8.3
 pathspec==0.11.2
 pathtools==0.1.2
-peft @ git+https://github.com/huggingface/peft.git@ec267c644a9a9f05a7340a7cb23ed5a6a6090dd0
+peft==0.4.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
@@ -110,12 +112,14 @@ setproctitle==1.3.2
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
+Sophia-Optimizer==0.2.1
 stack-data==0.6.2
 starlette==0.27.0
 sympy==1.12
 termcolor==2.3.0
 tokenize-rt==5.2.0
 tokenizers==0.13.3
+tomli==2.0.1
 toolz==0.12.0
 torch==2.0.1
 tqdm==4.65.0
@@ -127,6 +131,7 @@ tzdata==2023.3
 uc-micro-py==1.0.2
 urllib3==2.0.4
 uvicorn==0.23.2
+virtualenv==20.24.2
 wandb==0.15.8
 wcwidth==0.2.6
 websockets==11.0.3
